--- a/.github/workflows/build-ls-struct.yml
+++ b/.github/workflows/build-ls-struct.yml
@@ -3,6 +3,7 @@ name: Build Layered Standard Struct
 on:
   push:
     branches-ignore: [ 'temp/*' ]
+    tags: ['*']
   pull_request:
     branches: [ main ]
 
@@ -14,17 +15,31 @@ jobs:
 
     steps:
     - name: checkout
-      uses: actions/checkout@v3
-    - name: prepare
-      run: mkdir build
+      uses: actions/checkout@v4
+    - name: Generate revnumber
+      run: |
+        [[ $GITHUB_REF_TYPE == "tag" ]] && REVNUMBER=${GITHUB_REF:11} || REVNUMBER=${GITHUB_SHA:0:7}
+        echo GITHUB_SHA:      $GITHUB_SHA
+        echo GITHUB_REF_TYPE: $GITHUB_REF_TYPE
+        echo GITHUB_REF:      $GITHUB_REF
+        echo REVNUMBER:       $REVNUMBER
+        echo "REVNUMBER=$REVNUMBER" >> $GITHUB_ENV
+    - name: Create build directory
+      run: |
+        mkdir -p build/schema
+        mkdir -p build/images
     - name: build layered standard struct
       uses: avattathil/asciidoctor-action@master
       with:
-        program: "asciidoctor -D build --backend=html5 --attribute=revnumber=${GITHUB_REF#refs/heads/}-$GITHUB_SHA --attribute=revdate=$(date +%F) docs/index.adoc"
-    - name: copy images
-      run: tar cfC - docs images | tar xfC - build
+        program: "asciidoctor -D build --backend=html5 --attribute=revnumber=${{ env.REVNUMBER }} --attribute=revdate=$(date +%F) docs/index.adoc"
+    - name: Copy resources
+      run: |
+        cp LICENSE.txt build
+        cp schema/*.xsd build/schema
+        cp docs/images/favicon.ico build/images
+        cp docs/images/*.svg build/images
     - name: archive layered standard struct
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: FMI-LS-STRUCT
         path: build/*
